<resources>
    <string name="app_name">we_together</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_join2">join2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="test">Test</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_bottom_nav">bottom_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="home">홈</string>
    <string name="share">가사분담</string>
    <string name="cal">달력</string>
    <string name="com">커뮤니티</string>

    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
</resources>
