<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.we_together.Menu_share">

    <LinearLayout

        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/day1"
            android:textColor="@color/unchecked_text"
            android:textSize="@dimen/week_text_size"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            />

        <TextView
            android:id="@+id/day2"
            android:textColor="@color/unchecked_text"
            android:textSize="@dimen/week_text_size"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            />

        <TextView
            android:textColor="@color/unchecked_text"
            android:id="@+id/day3"
            android:textSize="@dimen/week_text_size"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            />
        <TextView
            android:textColor="@color/unchecked_text"
            android:id="@+id/day4"
            android:textSize="@dimen/week_text_size"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            />
        <TextView
            android:textColor="@color/unchecked_text"
            android:id="@+id/day5"
            android:textSize="@dimen/week_text_size"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            />
        <TextView
            android:textColor="@color/unchecked_text"
            android:id="@+id/day6"
            android:textSize="@dimen/week_text_size"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            />
        <TextView
            android:textColor="@color/unchecked_text"
            android:id="@+id/day7"
            android:textSize="@dimen/week_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listview"
            />

    </LinearLayout>


</LinearLayout>